tests/errors/semantics/return_value_mismatch_func_return.odl
main :: () -> void {
    () -> int {
        return true;
    };
};